Creating requirements.txt

--- a/mysite/home/templates/home.html
+++ b/mysite/home/templates/home.html
@@ -9,5 +9,15 @@
 </head>
 <body>
     <h1>Esta é a pagina HOMEr</h1>
+
+    <form action="{% url 'ver_home' %}" method="post">{% csrf_token %}
+        <input type="text" name="nome" placeholder="Digite seu nome">
+        <br>
+        <br>
+        <input type="password" name="senha" placeholder="Digite sua senha">
+        <br>
+        <br>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 </html>
